Decreased slightly the margin-top of .level to fix overlapping without an Img

--- a/src/styles/aboutMe.css
+++ b/src/styles/aboutMe.css
@@ -181,7 +181,7 @@ ol {
 
     .level {
         font-weight: 300;
-        margin: -25px 0 20px;
+        margin: -20px 0 20px;
     }
 
     .languages-list > li img {
